@@ -8,6 +8,8 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.function.Consumer;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 import org.minimalj.application.Application;
 import org.minimalj.backend.Backend;
@@ -30,6 +32,7 @@ import org.minimalj.util.LocaleContext;
 import org.minimalj.util.StringUtils;
 
 public class JsonPageManager implements PageManager, LoginListener {
+	private static final Logger logger = Logger.getLogger(JsonPageManager.class.getName());
 
 	private Subject subject;
 	private final Map<String, JsonComponent> componentById = new HashMap<>(100);
@@ -81,12 +84,43 @@ public class JsonPageManager implements PageManager, LoginListener {
 	}
 
 	public JsonOutput handle(JsonInput input) {
-		JsonFrontend.setSession(this);
-		Subject.setCurrent(subject);
-		String locale = (String) input.getObject("locale");
-		if (locale != null) {
-			LocaleContext.setCurrent(Locale.forLanguageTag(locale));
+		try {
+			JsonFrontend.setSession(this);
+			Subject.setCurrent(subject);
+			String locale = (String) input.getObject("locale");
+			if (locale != null) {
+				LocaleContext.setCurrent(Locale.forLanguageTag(locale));
+			}
+			return handle_(input);
+		} catch (ComponentUnknowException x) {
+			output = new JsonOutput();
+			show(visiblePageAndDetailsList.getPageIds());
+			return output;
+		} catch (Exception x) {
+			output.add("error", x.getClass().getSimpleName() + ":\n" + x.getMessage());
+			logger.log(Level.SEVERE, x.getMessage(), x);
+			return output;
+		} finally {
+			LocaleContext.setCurrent(null);
+			Subject.setCurrent(null);
+			JsonFrontend.setSession(null);
 		}
+	}
+
+	private static class ComponentUnknowException extends Exception {
+		private static final long serialVersionUID = 1L;
+
+	}
+
+	private JsonComponent getComponentById(Object id) throws ComponentUnknowException {
+		JsonComponent result = componentById.get(id);
+		if (result == null) {
+			throw new ComponentUnknowException();
+		}
+		return result;
+	}
+
+	private JsonOutput handle_(JsonInput input) throws ComponentUnknowException {
 		JsonFrontend.setUseInputTypes(Boolean.TRUE.equals(input.getObject("inputTypes")));
 
 		output = new JsonOutput();
@@ -128,41 +162,41 @@ public class JsonPageManager implements PageManager, LoginListener {
 			Object newValue = entry.getValue(); // most of the time a String,
 												// but not for password
 
-			JsonComponent component = componentById.get(componentId);
+			JsonComponent component = getComponentById(componentId);
 			((JsonInputComponent<?>) component).changedValue(newValue);
 			output.add("source", componentId);
 		}
 
 		String actionId = (String) input.getObject(JsonInput.ACTIVATED_ACTION);
 		if (actionId != null) {
-			JsonAction action = (JsonAction) componentById.get(actionId);
+			JsonAction action = (JsonAction) getComponentById(actionId);
 			action.action();
 		}
 
 		Map<String, Object> tableAction = input.get(JsonInput.TABLE_ACTION);
 		if (tableAction != null && !tableAction.isEmpty()) {
-			JsonTable<?> table = (JsonTable<?>) componentById.get(tableAction.get("table"));
+			JsonTable<?> table = (JsonTable<?>) getComponentById(tableAction.get("table"));
 			int row = ((Long) tableAction.get("row")).intValue();
 			table.action(row);
 		}
 
 		Map<String, Object> tableSortAction = input.get("tableSortAction");
 		if (tableSortAction != null && !tableSortAction.isEmpty()) {
-			JsonTable<?> table = (JsonTable<?>) componentById.get(tableSortAction.get("table"));
+			JsonTable<?> table = (JsonTable<?>) getComponentById(tableSortAction.get("table"));
 			int column = ((Long) tableSortAction.get("column")).intValue();
 			table.sort(column);
 		}
 
 		Map<String, Object> tableSelection = input.get("tableSelection");
 		if (tableSelection != null && !tableSelection.isEmpty()) {
-			JsonTable<?> table = (JsonTable<?>) componentById.get(tableSelection.get("table"));
+			JsonTable<?> table = (JsonTable<?>) getComponentById(tableSelection.get("table"));
 			List<Number> rows = ((List<Number>) tableSelection.get("rows"));
 			table.selection(rows);
 		}
 
 		String tableExtendContent = (String) input.getObject("tableExtendContent");
 		if (tableExtendContent != null) {
-			JsonTable<?> table = (JsonTable<?>) componentById.get(tableExtendContent);
+			JsonTable<?> table = (JsonTable<?>) getComponentById(tableExtendContent);
 			output.add("tableId", tableExtendContent);
 			output.add("tableExtendContent", table.extendContent());
 			output.add("extendable", table.isExtendable());
@@ -176,7 +210,7 @@ public class JsonPageManager implements PageManager, LoginListener {
 
 		String loadSuggestions = (String) input.getObject("loadSuggestions");
 		if (loadSuggestions != null) {
-			JsonTextField textField = (JsonTextField) componentById.get(loadSuggestions);
+			JsonTextField textField = (JsonTextField) getComponentById(loadSuggestions);
 			String searchText = (String) input.getObject("searchText");
 			List<String> suggestions = textField.getSuggestions().search(searchText);
 			output.add("suggestions", suggestions);
@@ -185,7 +219,7 @@ public class JsonPageManager implements PageManager, LoginListener {
 
 		String openLookupDialog = (String) input.getObject("openLookupDialog");
 		if (openLookupDialog != null) {
-			JsonLookup lookup = (JsonLookup) componentById.get(openLookupDialog);
+			JsonLookup lookup = (JsonLookup) getComponentById(openLookupDialog);
 			lookup.showLookupDialog();
 		}
 
@@ -200,8 +234,6 @@ public class JsonPageManager implements PageManager, LoginListener {
 			show(pageIds);
 		}
 
-		Subject.setCurrent(null);
-		JsonFrontend.setSession(null);
 		return output;
 	}
 
