@@ -6,6 +6,7 @@ Every release contains many small fixes.
 * Refactor Routing
 * Table Pages: no need to pass columns in constructor
 * PageStore: limit history length
+* Html Frontend: Exception handling
 
 === 1.19.1.0
 * JsonFrontend: better meta information and title
